Thu Jan 11 19:19:55 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * config/swig_php.mpb:
        * config/swig_python.mpb:
        * config/swig_ruby.mpb:
        * config/swig_tcl.mpb:

          Added SWIG base projects for php, python, ruby, and tcl.

        * generate_export_header.pl:

          Simplified code to determine the output file name.

        * modules/ProjectCreator.pm:

          Fixed a bug where when the -ti option is used within a workspace,
          subsequent uses of -ti are ignored.

Mon Jan  8 13:39:23 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeWorkspaceCreator.pm:

          During post processing, remove any duplicate targets.  Duplicate
          targets show up as build warnings from automake.

Fri Jan 05 19:06:52 2007  Steve Huston  <shuston@riverace.com>

        * templates/vc7dll.mpt:
        * templates/vc7exe.mpt:
        * templates/vc7lib.mpt:
        * templates/vc7libexe.mpt: Added Pharlap ETS configuration sections
          to allow generation of Pharlap ETS configurations with VC7.1.
          Thank you to David Hauck for contributing these changes.

Thu Jan  4 16:08:51 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * devtools/document_template.pl:

          Changed the table style for the html output.

        * docs/templates/vc7.txt:

          Added the output_subdir definition.

        * docs/templates/vc8.txt:

          Began documenting the vc8 template.

        * docs/MPC.sgml:
        * docs/USAGE:
        * modules/AutomakeWorkspaceCreator.pm:
        * modules/BDS4WorkspaceCreator.pm:
        * modules/Driver.pm:
        * modules/EM3WorkspaceCreator.pm:
        * modules/HTMLWorkspaceCreator.pm:
        * modules/MakeWorkspaceBase.pm:
        * modules/Options.pm:
        * modules/ProjectCreator.pm:
        * modules/VC6WorkspaceCreator.pm:
        * modules/VC71WorkspaceCreator.pm:
        * modules/VC7WorkspaceCreator.pm: